task chess visability

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Css-test</title>
-    <link href="/assets/style/overflow.css" rel="stylesheet">
+    <link href="/assets/style/style.css" rel="stylesheet">
   </head>
   <body bgcolor="grey">
-    <h2 class="h2-header">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, possimus! Est quod voluptatibus inventore veritatis, error mollitia, voluptates corrupti neque corporis porro omnis dignissimos aliquid ex eos minus consequatur dicta aliquam alias ut delectus cumque dolorem obcaecati libero. Molestiae, rerum quisquam officia cupiditate ab, consequuntur corporis quae provident doloribus aut quidem unde ipsa nostrum similique odit iusto vel delectus temporibus?</h2>
-    <div class="div hidden-1">div 1 </div>
-    <div class="div hidden-2">div 2</div>
-    <div class="div hidden-3">div 3</div>
-    <div class="div hidden-4">div 4</div>
-    
+   <div class="block white"></div>
+   <div class="block black"></div>
+   <div class="block white"></div>
+   <div class="block black"></div>
+   <div class="block white"></div>
+   <div class="block black"></div>
+   <div class="block white"></div>
+   <div class="block black-last"></div>
+   <div class="block white"></div>
   </body>
 </html>
