--- a/index.html
+++ b/index.html
@@ -4,18 +4,88 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Css-test</title>
+    <title>Table-Task</title>
     <link href="/assets/style/style.css" rel="stylesheet">
   </head>
-  <body bgcolor="grey">
-   <div class="block white"></div>
-   <div class="block black"></div>
-   <div class="block white"></div>
-   <div class="block black"></div>
-   <div class="block white"></div>
-   <div class="block black"></div>
-   <div class="block white"></div>
-   <div class="block black-last"></div>
-   <div class="block white"></div>
-  </body>
+  <body >
+<table>
+  <thead>
+    <tr>
+      <th scope="col" class="th-head-1">Choose your plan</th>
+      <th scope="col" class="th-head-2">
+      <div class="name-tarif">starter</div>
+      <div class="price">$10</div>
+      <div class="per-month">per month</div>
+    </th>
+      <th scope="col" class="th-head-3">
+        <div class="name-tarif">econom</div>
+        <div class="price">$30</div>
+        <div class="per-month">per month</div>
+      </th>
+      <th scope="col"class="th-head-4">
+      <div class="name-tarif">standart</div>
+      <div class="price">$59</div>
+      <div class="per-month">per month</div>
+      </th>
+      <th scope="col" class="th-head-5">
+      <div class="name-tarif">proffesional</div>
+      <div class="price">$99</div>
+      <div class="per-month">per month</div>
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row" class="bg-color-dark left-side">Amount of space</th>
+      <td class="bg-color-light">20GB</td>
+      <td class="bg-color-dark">40GB</td>
+      <td class="bg-color-light">110GB</td>
+      <td class="bg-color-dark">Unlimited</td>
+    </tr>
+    <tr>
+      <th scope="row" class="bg-color-light left-side">Bandwidth per month</th>
+      <td>120GB</td>
+      <td class="bg-color-light">240Gb</td>
+      <td>610GB</td>
+      <td class="bg-color-light">1300GB</td>
+    </tr>
+    <tr>
+      <th scope="row" class="bg-color-dark left-side">Email accounts</th>
+      <td class="bg-color-light">1</td>
+      <td class="bg-color-dark">15</td>
+      <td class="bg-color-light">60</td>
+      <td class="bg-color-dark">Unlimited</td>
+    </tr>
+    <tr>
+      <th scope="row" class="bg-color-light left-side">MySQL databases</th>
+      <td>1</td>
+      <td class="bg-color-light">15</td>
+      <td>60</td>
+      <td class="bg-color-light">Unlimited</td>
+    </tr>
+    <tr>
+      <th scope="row" class="bg-color-dark left-side">25h support</th>
+      <td class="bg-color-light">No</td>
+      <td class="bg-color-dark">Yes</td>
+      <td class="bg-color-light">Yes</td>
+      <td class="bg-color-dark">Yes</td>
+    </tr>
+    <tr>
+      <th scope="row" class="bg-color-light left-side">Support ticket's per month</th>
+      <td>2</td>
+      <td class="bg-color-light">6</td>
+      <td>14</td>
+      <td class="bg-color-light">20</td>
+    </tr>
+  </tbody>
+  <tfoot>  
+    <tr>
+      <td class="bg-color-dark left-side"></td>
+    <td class="bg-color-light"><button>start</button></td>
+    <td class="bg-color-dark"><button>start</button></td>
+    <td class="bg-color-light"><button>start</button></td>
+    <td class="bg-color-dark"><button>start</button></td>
+  </tr>
+</tfoot>
+</table>
 </html>
